Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        " 'USA'}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = len(countries)-len(uniqui)\n",
+    "num_of_repeats = len(countries)-len(uniqu)\n",
     "num_of_repeats # 3"
    ]
   },
